Adding API Docs for Student Module
