# app/Http/Requests/Student/StoreStudentRequest.php
@@ -29,6 +29,10 @@ class StoreStudentRequest extends FormRequest
             'parent_completness_id' => 'required',
             'parent_income_id' => 'required',
             'other_criteria_id' => 'required',
+            'name' => 'required',
+            'gender' => 'required',
+            'phone_number' => 'required',
+            'card_type' => 'required',
             'card_number' => [
                 'required',
                 Rule::unique('profiles')->whereNull('deleted_at')
@@ -43,7 +47,10 @@ class StoreStudentRequest extends FormRequest
             'parent_completness_id.required' => 'Parent Completness must be selected !',
             'parent_income_id.required' => 'Parent Income must be selected !',
             'other_criteria_id.required' => 'Other Criteria must be selected !',
-            'nisn.required' => 'NISN field must be filled !',
+            'name.required' => 'Name field must be filled !',
+            'gender.required' => 'Gender field must be selected !',
+            'phone_number.required' => 'Phone Number field must be filled !',
+            'card_type.required' => 'Card Type field must be selected !',
             'nisn.unique' => 'This NISN has already been taken !'
         ];
     }
