# app/Http/Requests/Student/UpdateStudentRequest.php
@@ -29,9 +29,13 @@ class UpdateStudentRequest extends FormRequest
             'parent_completness_id' => 'required',
             'parent_income_id' => 'required',
             'other_criteria_id' => 'required',
+            'name' => 'required',
+            'gender' => 'required',
+            'phone_number' => 'required',
+            'card_type' => 'required',
             'card_number' => [
                 'required',
-                Rule::unique('profiles')->ignore($this->route('student'))->whereNull('deleted_at')
+                // Rule::unique('profiles')->ignore($this->route('student'))->whereNull('deleted_at')
             ]
         ];
     }
@@ -43,6 +47,10 @@ class UpdateStudentRequest extends FormRequest
             'parent_completness_id.required' => 'Parent Completness must be selected !',
             'parent_income_id.required' => 'Parent Income must be selected !',
             'other_criteria_id.required' => 'Other Criteria must be selected !',
+            'name.required' => 'Name field must be filled !',
+            'gender.required' => 'Gender field must be selected !',
+            'phone_number.required' => 'Phone Number field must be filled !',
+            'card_type.required' => 'Card Type field must be selected !',
             'nisn.required' => 'NISN field must be filled !',
             'nisn.unique' => 'This NISN has already been taken !'
         ];
